--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,14 +16,14 @@ mariadb_root_home: /root
 mariadb_root_username: root
 mariadb_root_password: root
 
-# Set this to `yes` to forcibly update the root password.
-mariadb_root_password_update: no
-mariadb_user_password_update: no
+# Set this to `true` to forcibly update the root password.
+mariadb_root_password_update: false
+mariadb_user_password_update: false
 
-mariadb_enabled_on_startup: yes
+mariadb_enabled_on_startup: true
 
-# update my.cnf. each time role is run? yes | no
-overwrite_global_mycnf: yes
+# update my.cnf. each time role is run? true | false
+overwrite_global_mycnf: true
 
 # The following variables have a default value depending on operating system.
 # mariadb_config_file: /etc/my.cnf
@@ -45,7 +45,7 @@ mariadb_port: 3306
 mariadb_bind_address: '127.0.0.1'
 mariadb_skip_name_resolve: true
 mariadb_datadir: /var/lib/mysql
-mariadb_tmpdir:  /tmp
+mariadb_tmpdir: /tmp
 mariadb_sql_mode: ''
 
 # The following variables have a default value depending on operating system.
@@ -56,7 +56,7 @@ mariadb_sql_mode: ''
 mariadb_log_file_group: mysql
 
 # Slow query log settings.
-mariadb_slow_query_log_enabled: no
+mariadb_slow_query_log_enabled: false
 mariadb_slow_query_time: "2"
 # The following variable has a default value depending on operating system.
 # mariadb_slow_query_log_file: /var/log/mysql-slow.log
@@ -148,4 +148,3 @@ mariadb_replication_user: []
 mariadb_default_character_set: utf8mb4
 mariadb_character_set_server: utf8mb4
 mariadb_collation_server: utf8mb4_general_ci
-
