--- a/tasks/replication.yml
+++ b/tasks/replication.yml
@@ -40,7 +40,7 @@
     master_password: "{{ mariadb_replication_user.password }}"
     master_log_file: "{{ master.File }}"
     master_log_pos: "{{ master.Position }}"
-  ignore_errors: True
+  ignore_errors: true
   when: >
     ((slave.Is_Slave is defined and not slave.Is_Slave) or (slave.Is_Slave is not defined and slave|failed))
     and (mariadb_replication_role == 'slave')
