--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,7 +2,7 @@
 
 - name: create neccessary directries
   file:
-    path: '{{item}}'
+    path: '{{ item }}'
     state: directory
     owner: root
     group: root
@@ -21,7 +21,7 @@
     mode: 0644
   with_items:
     - src: etc/mysql/my.cnf.j2
-      dest: '{{mariadb_config_file}}'
+      dest: '{{ mariadb_config_file }}'
     - src: etc/mysql/mariadb.cnf.j2
       dest: '{{ mariadb_include_dir }}/mariadb.cnf'
     - src: etc/mysql/my.cnf.fallback.j2
@@ -68,7 +68,7 @@
     owner: mysql
     group: mysql
     mode: 0755
-  when: mariadb_tmpdir != '/tmp' and mariadb_tmpdir is defined and mariadb_tmpdir != ''
+  when: mariadb_tmpdir != '/tmp' and mariadb_tmpdir is defined and mariadb_tmpdir | length != 0
 
 - name: "create logdir '{{ mariadb_log | dirname }}' if it does not exist"
   file:
@@ -77,7 +77,7 @@
     owner: mysql
     group: mysql
     mode: 0755
-  when: mariadb_log is defined and mariadb_log != ''
+  when: mariadb_log is defined and mariadb_log | length != 0
 
 - block:
     - name: create slow query log file (if configured).
@@ -113,7 +113,7 @@
         owner: mysql
         group: "{{ mariadb_log_file_group }}"
         mode: 0640
-  when: mariadb_log == "" and mariadb_log_error != ""
+  when: mariadb_log | length == 0 and mariadb_log_error | length != 0
 
 - name: Ensure mariadb is started and enabled on boot.
   service:
