--- a/tasks/setup-archlinux.yml
+++ b/tasks/setup-archlinux.yml
@@ -25,17 +25,17 @@
   service:
     name: '{{ mariadb_daemon }}'
     state: stopped
-  when: mariadb_installed.stat.exists == false
+  when: not mariadb_installed.stat.exists
 
 - name: Delete innodb log files created by apt package after initial install.
   file:
-    path: '{{ mariadb_datadir }}/{{item}}'
+    path: '{{ mariadb_datadir }}/{{ item }}'
     state: absent
   with_items:
     - "ib_logfile0"
     - "ib_logfile1"
-  when: mariadb_installed.stat.exists == false
+  when: not mariadb_installed.stat.exists
 
 - name: Check if mariadb packages were installed.
   set_fact:
-    mariadb_install_packages: '{{deb_mariadb_install_packages is defined and deb_mariadb_install_packages.changed}}'
+    mariadb_install_packages: '{{ deb_mariadb_install_packages is defined and deb_mariadb_install_packages.changed }}'
