--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: create neccessary directries
+- name: create neccessary directories
   file:
     path: '{{ item }}'
     state: directory
@@ -8,11 +8,10 @@
     group: root
     mode: 0755
   loop:
-    - '{{ mariadb_include_dir }}'
-    - '{{ mariadb_include_dir }}/conf.d'
-    - '{{ mariadb_include_dir }}/mariadb.conf.d'
+    - '{{ mariadb_config_dir }}/conf.d'
+    - '{{ mariadb_config_dir }}/mariadb.conf.d'
 
-- name: update configuration file(s)
+- name: create configuration files
   template:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
@@ -21,39 +20,39 @@
     mode: 0644
   with_items:
     - src: etc/mysql/my.cnf.j2
-      dest: '{{ mariadb_config_file }}'
+      dest: "{{ mariadb_config_dir }}/my.cnf"
     - src: etc/mysql/mariadb.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.cnf'
     - src: etc/mysql/my.cnf.fallback.j2
-      dest: '{{ mariadb_include_dir }}/my.cnf.fallback'
+      dest: '{{ mariadb_config_dir }}/my.cnf.fallback'
     - src: etc/mysql/conf.d/mysql.cnf.j2
-      dest: '{{ mariadb_include_dir }}/conf.d/mysql.cnf'
+      dest: '{{ mariadb_config_dir }}/conf.d/mysql.cnf'
     - src: etc/mysql/conf.d/mysqldump.cnf.j2
-      dest: '{{ mariadb_include_dir }}/conf.d/mysqldump.cnf'
+      dest: '{{ mariadb_config_dir }}/conf.d/mysqldump.cnf'
     - src: etc/mysql/mariadb.conf.d/50-client.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/50-client.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-client.cnf'
     - src: etc/mysql/mariadb.conf.d/59-client-security.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/59-client-security.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-client-security.cnf'
     - src: etc/mysql/mariadb.conf.d/50-mysql-clients.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/50-mysql-clients.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-mysql-clients.cnf'
     - src: etc/mysql/mariadb.conf.d/50-mysqld_safe.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/50-mysqld_safe.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-mysqld_safe.cnf'
     - src: etc/mysql/mariadb.conf.d/50-server.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/50-server.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-server.cnf'
     - src: etc/mysql/mariadb.conf.d/59-server-replication.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/59-server-replication.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-replication.cnf'
     - src: etc/mysql/mariadb.conf.d/59-server-logging.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/59-server-logging.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-logging.cnf'
     - src: etc/mysql/mariadb.conf.d/59-server-innodb.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/59-server-innodb.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-innodb.cnf'
     - src: etc/mysql/mariadb.conf.d/59-server-finetuning.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/59-server-finetuning.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-finetuning.cnf'
     - src: etc/mysql/mariadb.conf.d/59-server-security.cnf.j2
-      dest: '{{ mariadb_include_dir }}/mariadb.conf.d/59-server-security.cnf'
+      dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-security.cnf'
   register: configuration
   notify: restart mariadb
 
-- name: create datadir {{ mariadb_datadir }} if it does not exist
+- name: create data directory '{{ mariadb_datadir }}'
   file:
     path: "{{ mariadb_datadir }}"
     state: directory
@@ -61,7 +60,7 @@
     group: mysql
     mode: 0755
 
-- name: "create tmpdir '{{ mariadb_tmpdir }}' if it does not exist"
+- name: create tmp directory '{{ mariadb_tmpdir }}'
   file:
     path: "{{ mariadb_tmpdir }}"
     state: directory
@@ -70,17 +69,27 @@
     mode: 0755
   when: mariadb_tmpdir != '/tmp' and mariadb_tmpdir is defined and mariadb_tmpdir | length != 0
 
-- name: "create logdir '{{ mariadb_log | dirname }}' if it does not exist"
+- name: create log directory '{{ mariadb_log_directory }}'
   file:
-    path: "{{ mariadb_log | dirname }}"
+    path: "{{ mariadb_log_directory }}"
     state: directory
     owner: mysql
     group: mysql
     mode: 0755
-  when: mariadb_log is defined and mariadb_log | length != 0
+  when: mariadb_log_directory is defined and mariadb_log_directory | length != 0
+
+- name: create pid directory '{{ mariadb_pid_file | dirname }}'
+  file:
+    path: "{{ mariadb_pid_file | dirname }}"
+    state: directory
+    owner: mysql
+    group: mysql
+    mode: 0755
+  when: mariadb_pid_file is defined and mariadb_pid_file | length != 0
+
 
 - block:
-    - name: create slow query log file (if configured).
+    - name: create slow query log file
       file:
         path: "{{ mariadb_slow_query_log_file }}"
         state: touch
@@ -88,17 +97,18 @@
         group: "{{ mariadb_log_file_group }}"
         mode: 0640
 
-    - name: set ownership on slow query log file (if configured).
+    - name: set ownership on slow query log file
       file:
         path: "{{ mariadb_slow_query_log_file }}"
         state: file
         owner: mysql
         group: "{{ mariadb_log_file_group }}"
         mode: 0640
+
   when: mariadb_slow_query_log_enabled
 
 - block:
-    - name: Create error log file (if configured).
+    - name: create error log file
       file:
         path: "{{ mariadb_log_error }}"
         state: touch
@@ -106,18 +116,25 @@
         group: "{{ mariadb_log_file_group }}"
         mode: 0640
 
-    - name: Set ownership on error log file (if configured).
+    - name: set ownership on error log file
       file:
         path: "{{ mariadb_log_error }}"
         state: file
         owner: mysql
         group: "{{ mariadb_log_file_group }}"
         mode: 0640
+
   when: mariadb_log | length == 0 and mariadb_log_error | length != 0
 
-- name: Ensure mariadb is started and enabled on boot.
+- name: configure swappiness
+  sysctl:
+    name: vm.swappiness
+    value: "{{ mariadb_swappiness | int }}"
+    state: present
+  when: mariadb_configure_swappiness | bool
+
+- name: ensure mariadb is started and enabled on boot
   service:
-    name: '{{ mariadb_daemon }}'
+    name: '{{ mariadb_service }}'
     state: started
-    enabled: '{{ mariadb_enabled_on_startup }}'
-  register: mariadb_service_configuration
+    enabled: true
