--- a/tasks/secure-installation.yml
+++ b/tasks/secure-installation.yml
@@ -1,75 +1,75 @@
 ---
 
-- name: Get mariadb version.
-  command: 'mysql --version'
-  register: mariadb_cli_version
-  changed_when: false
+- name: check if a custom root password is specified
+  debug:
+    msg: >
+      Warning!!
+      The MariaDB root password was left empty.
+      Please set a custom password with role variable mariadb_root_password
+      to secure your database server!
+  when: mariadb_root_password | length == 0
+
+
+- name: check for mariadb root password change
+  copy:
+    dest: "{{ mariadb_config_dir }}/rootpw_configured"
+    content: "{{ mariadb_root_password | checksum }}"
+  register: rootpw_updated
 
 - block:
-  - name: Ensure default user {{ mariadb_user_name }} is present.
-    mysql_user:
-      name: "{{ mariadb_user_name }}"
-      host: 'localhost'
-      password: "{{ mariadb_user_password }}"
-      priv: '*.*:ALL,GRANT'
-      state: present
 
-  - name: copy user-my.cnf file with password credentials
-    template:
-      src: "user-my.cnf.j2"
-      dest: "{{ mariadb_user_home }}/.my.cnf"
-      owner: "{{ mariadb_user_name }}"
-      mode: 0600
-  when: (
-    (mariadb_user_home     is defined and mariadb_user_home     | length != 0) and
-    (mariadb_user_name     is defined and mariadb_user_name     | length != 0) and
-    (mariadb_user_password is defined and mariadb_user_password | length != 0))
+    - name: set MariaDB root password for the first time (root@localhost)
+      command: >
+        mysqladmin --user=root password "{{ mariadb_root_password }}"
+      changed_when: false
+      no_log: true
 
-- name: Disallow root login remotely
-  command: 'mysql -NBe "{{ item }}"'
-  with_items:
-    - DELETE FROM mysql.user WHERE User='{{ mariadb_root_username }}' AND Host NOT IN ('localhost', '127.0.0.1', '::1')
+    # Has to be after the root password assignment, for idempotency.
+    - name: create .my.cnf file with root password credentials
+      template:
+        src: "root-my.cnf.j2"
+        dest: "{{ mariadb_root_home }}/.my.cnf"
+        owner: root
+        group: root
+        mode: 0600
+      when: (
+        mariadb_install_packages | bool or
+        mariadb_root_password_update)
+
+  when: rootpw_updated is changed
+
+
+# This command will fail when the root password was set previously
+- name: check if root password is set
+  shell: >
+    mysqladmin -u root status
+  changed_when: false
+  failed_when: false
+  register: root_pwd_check
+  tags: mariadb
+
+- name: disallow root login remotely
+  command: >
+    mysql --skip-column-names --batch --execute
+      "delete from mysql.user where user = '{{ mariadb_root_username }}' and host not in ('localhost', '127.0.0.1', '::1')"
   changed_when: false
 
-- name: get list of hosts for the root user.
+- name: get list of hosts for the anonymous user
   command: >
-    mysql -NBe
-      "SELECT Host FROM mysql.user WHERE User = '{{ mariadb_root_username }}' ORDER BY (Host='localhost') ASC"
-  register: mysql_root_hosts
-  changed_when: false
-  check_mode: false
-  when: (
-    mariadb_install_packages | bool or
-    mariadb_root_password_update)
-
-# Has to be after the root password assignment, for idempotency.
-- name: create .my.cnf file with root password credentials
-  template:
-    src: "root-my.cnf.j2"
-    dest: "{{ mariadb_root_home }}/.my.cnf"
-    owner: root
-    group: root
-    mode: 0600
-  when: (
-    mariadb_install_packages | bool or
-    mariadb_root_password_update)
-
-- name: get list of hosts for the anonymous user.
-  command: >
-    mysql -NBe
-      'SELECT Host FROM mysql.user WHERE User = ""'
+    mysql --skip-column-names --batch --execute
+      'select host from mysql.user where user = ""'
   register: mariadb_anonymous_hosts
   changed_when: false
   check_mode: false
 
-- name: remove anonymous mariadb users.
+- name: remove anonymous mariadb users
   mysql_user:
     name: ""
     host: "{{ item }}"
     state: absent
   with_items: "{{ mariadb_anonymous_hosts.stdout_lines | default([]) }}"
 
-- name: remove mariadb test database.
+- name: remove mariadb test database
   mysql_db:
     name: test
     state: absent
