some changes to support centos 7, 8 and debian 9, 10 and ubuntu 16, 18

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -9,3 +9,6 @@
     no_proxy: "{{ lookup('env', 'no_proxy') }}"
   roles:
     - role: ansible-mariadb
+      vars:
+        # ansible_python_interpreter: python3
+        mariadb_root_password: root_password
