--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,8 @@
 ---
+
+mariadb_use_external_repo: true
+mariadb_version: 10.4
+
 # Set this to the user ansible is logging in as - should have root
 # or sudo access
 mariadb_user_home: ''
