--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,12 +11,12 @@ lint:
     config-file: molecule/default/yaml-lint.yml
 
 platforms:
-  # - name: centos-7
-  #   image: paulfantom/centos-molecule:7
-  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-  #   privileged: true
-  #   volumes:
-  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  - name: centos-7
+    image: paulfantom/centos-molecule:7
+    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
   - name: centos-8
     image: paulfantom/centos-molecule:8
@@ -25,39 +25,39 @@ platforms:
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
-  - name: ubuntu-16
-    image: paulfantom/ubuntu-molecule:16.04
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  - name: ubuntu-18
-    image: paulfantom/ubuntu-molecule:18.04
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  - name: debian-9
-    image: paulfantom/debian-molecule:9
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-
-  - name: debian-10
-    image: paulfantom/debian-molecule:10
-    docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  # - name: ubuntu-16
+  #   image: paulfantom/ubuntu-molecule:16.04
+  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+  #   privileged: true
+  #   volumes:
+  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  #
+  # - name: ubuntu-18
+  #   image: paulfantom/ubuntu-molecule:18.04
+  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+  #   privileged: true
+  #   volumes:
+  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  #
+  # - name: debian-9
+  #   image: paulfantom/debian-molecule:9
+  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+  #   privileged: true
+  #   volumes:
+  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  #
+  # - name: debian-10
+  #   image: paulfantom/debian-molecule:10
+  #   docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
+  #   privileged: true
+  #   volumes:
+  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
 
 
 provisioner:
   name: ansible
-  # ansible_args:
-  #   - --diff
+  ansible_args:
+    - --diff
   #   - -v
   #   - -v
   #   - -v
@@ -72,7 +72,7 @@ provisioner:
 scenario:
   name: default
   test_sequence:
-    - lint
+    # - lint
     - destroy
     - dependency
     - syntax
