--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -2,36 +2,36 @@
 
 - name: ensure mariadb packages are installed (debian)
   package:
-    name: "{{ mariadb_packages }}"
+    name: "{{ item }}"
     state: present
-  # with_items: "{{ mariadb_packages }}"
+  loop:
+    "{{ mariadb_packages }}"
   register: mariadb_install_packages
   when:
     ansible_os_family | lower == 'debian'
 
 
-- name: ensure mariadb packages are installed (centos < 8)
-  package:
-    name: "{{ item }}"
-    state: present
-    use: yum
-  loop:
-    "{{ mariadb_packages }}"
-  register: mariadb_install_packages
-  when: (
-    ansible_os_family | lower == 'redhat' and
-    ansible_distribution_version | int < 8)
+- block:
 
-- name: ensure mariadb packages are installed (centos >= 8)
-  package:
-    name: "{{ mariadb_packages }}"
-    state: present
-    use: dnf
-  register: mariadb_install_packages
-  when: (
-    ansible_os_family | lower == 'redhat' and
-    ansible_distribution_version | int >= 8)
+    - name: ensure mariadb packages are installed (centos < 8)
+      package:
+        name: "{{ item }}"
+        state: present
+        use: yum
+      loop:
+        "{{ mariadb_packages }}"
+      register: mariadb_install_packages
+      when: ansible_distribution_version | int < 8
 
+    - name: ensure mariadb packages are installed (centos >= 8)
+      package:
+        name: "{{ mariadb_packages }}"
+        state: present
+        use: dnf
+      register: mariadb_install_packages
+      when: ansible_distribution_version | int >= 8
+
+  when: ansible_os_family | lower == 'redhat'
 
 
 - name: ensure python bindings for mariadb are installed
