--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,11 +9,19 @@
 - name: install mariadb
   include_tasks: installation.yml
 
-- include_tasks: configure.yml
-- include_tasks: secure-installation.yml
+- name: configure mariadb
+  include_tasks: configure.yml
 
-- include_tasks: monitoring.yml
-- include_tasks: databases.yml
-- include_tasks: users.yml
+- name: security changes
+  include_tasks: secure-installation.yml
+
+- name: create monitoring stuff
+  include_tasks: monitoring.yml
+
+- name: create databases
+  include_tasks: databases.yml
+
+- name: create users
+  include_tasks: users.yml
 
 # - include_tasks: replication.yml
