update packagemanager caches before detect available mariadb version
add assert when no mariadb version found
update test environment

--- a/molecule/use-external-repository/playbook.yml
+++ b/molecule/use-external-repository/playbook.yml
@@ -9,7 +9,7 @@
   vars:
     ansible_python_interpreter: python3
 
-    mariadb_use_external_repo: false
+    mariadb_use_external_repo: true
 
     mariadb_bind_address: 127.0.0.1
     mariadb_root_password: root_password
