--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,10 @@ skipsdist = true
 
 [travis:env]
 ANSIBLE=
-  2.6: ansible26
   2.7: ansible27
   2.8: ansible28
   2.9: ansible29
+  2.10: ansible210
 
 [testenv]
 passenv = *
@@ -22,10 +22,11 @@ deps =
     ansible27: ansible>=2.7,<2.8
     ansible28: ansible>=2.8,<2.9
     ansible29: ansible>=2.9,<2.10
+    ansible210: ansible>=2.10,<2.11
 
 commands_pre =
     /usr/bin/find {toxinidir} -type f -not -path '{toxinidir}/.tox/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
-    /usr/bin/sh -c '/usr/bin/find {homedir}/.cache -type d -path "*/molecule_*" -exec rm -rfv \{\} +;'
+    /bin/sh -c '/usr/bin/find {homedir}/.cache -type d -path "*/molecule_*" -exec rm -rfv \{\} +;'
 
 commands =
     {posargs:molecule test --all --destroy always}
